# UnitConverterAI_Init

./: .gitignore  CMakeLists.txt  README.md  unit_converter.cpp
chat/: 업로드요청-2025-09-16-03.md  코드분석요청-2025-09-16-05.md  테스트ON요청-2025-09-16-02.md  폴더생성요청-2025-09-16-01.md  프로젝트업로드요청-2025-09-16-04.md
src/: converter.cpp  converter.h  main.cpp
tset/: CMakeLists.txt  converter_tests.cpp
